# actions-playground

./: .bumpversion.cfg  README.md  event.json  github.json  hatch-shell.sh  mkdocs.yml  pyproject.toml  requirements.txt  versions.copy.json  versions.json
.github/actions/configure-git-user/: action.sh  action.yml
.github/workflows/: detect_version_bump.yml  detect_version_bump1.yml  guard_job_test.yml  main.yml  merged_pull_request_event.yml  publish_docs.yml  publish_release.yml  pull_request_title.yml  version_bump_pr.yml
0.1.0/: 404.html  index.html
0.1.0/search/: search_index.json
0.10.0/other/: index.html
0.11.0/foo/old/: index.html
0.12.0-alpha/new/: index.html
0.12.0-alpha/other/: index.html
0.12.1/: index.html
0.12.1/other/: index.html
0.18.0/: 404.html  index.html
0.18.0/new/: index.html
0.18.0/other/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html
0.4.0/search/: search_index.json
0.5.0/: index.html
0.6.0/other/: index.html
_dev-my-feature-1/: index.html
_dev-my-feature-1/search/: search_index.json
dev/: 404.html  index.html
dev-redirects/: 404.html  index.html
dev/new/: index.html
dev/old/: index.html
dev/other/: index.html
dev/search/: search_index.json
docs/: index.md  new.md  other.md
latest/: index.html
latest/new/: index.html
latest/old/: index.html
latest/other/: index.html
scripts/: bump_version.sh  update_docs_for_version.sh  version.sh
v0.9.0/: index.html
v0.9.0/search/: search_index.json
(+20 files in other folders)
