[project]
name = "actions-playground"
version = "0.0.1"

# version bumping
[tool.hyper-bump-it]
current_version = "0.15.0"

[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs==1.5.3"
]
