# version bumping
[tool.hyper-bump-it]
current_version = "0.15.0"

[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"

[build-system]
requires = ["hatchling==1.18.0"]
build-backend = "hatchling.build"

[project]
name = "FAKE_actions-playground"
version = "0.0.1"

[tool.hatch.envs.default]
detached = true
description = "Test and lint the project code"
dependencies = [
    "black==23.11.0",
]